# kraken

./: .editorconfig  .gitignore  .gitmodules  .hgignore  .hgtags  .travis.yml  CMakeLists.txt  CMakeSettings.json  build_macos.sh  build_win64.bat  configure_linux.sh  configure_macos.sh  configure_macos_xcode.sh  configure_win64.bat  configure_win64_msvc.bat
.github/workflows/: cmake-multi-platform.yml
KREngine/KREngine/: KREngine-Prefix.pch
KREngine/KREngine.xcodeproj/: project.pbxproj
KREngine/Kraken.xcodeproj/: project.pbxproj
KREngine/kraken/: ImporterAudioLists.cpp  ImporterAudioLists.h  KRAABB.cpp  KRAABB.h  KRAmbientSphere.cpp  KRAmbientSphere.h  KRAmbientZone.cpp  KRAmbientZone.h  KRAnimation.cpp  KRAnimation.h  KRAnimationAttribute.cpp  KRAnimationAttribute.h  KRAnimationCurve.cpp  KRAnimationCurve.h  KRAnimationCurveManager.cpp  KRAnimationCurveManager.h  KRAnimationManager.cpp  KRAnimationManager.h  KRAudioBuffer.cpp  KRAudioBuffer.h  KRAudioManager.cpp  KRAudioManager.h  KRAudioSample.cpp  KRAudioSample.h  KRAudioSource.cpp  KRAudioSource.h  KRBehavior.cpp  KRBehavior.h  KRBone.cpp  KRBone.h  KRBundle.cpp  KRBundleManager.cpp  KRBundleManager.h  KRCamera.cpp  KRCamera.h  KRCollider.cpp  KRCollider.h  KRContext.cpp  KRContext.h  KRDataBlock.cpp  (+102 more)
KREngine/kraken_osx/: krengine_osx.h
Kraken.xcodeproj/: project.pbxproj
kraken/: CMakeLists.txt  Context.cpp  Info.plist  KRAABB.cpp  KRAmbientZone.cpp  KRAmbientZone.h  KRAnimation.cpp  KRAnimation.h  KRAnimationAttribute.cpp  KRAnimationAttribute.h  KRAnimationCurve.cpp  KRAnimationCurve.h  KRAnimationCurveManager.cpp  KRAnimationCurveManager.h  KRAnimationLayer.cpp  KRAnimationLayer.h  KRAnimationManager.cpp  KRAnimationManager.h  KRAudioBuffer.cpp  KRAudioBuffer.h  KRAudioManager.cpp  KRAudioManager.h  KRAudioSample.cpp  KRAudioSample.h  KRAudioSource.cpp  KRAudioSource.h  KRBehavior.cpp  KRBehavior.h  KRBone.cpp  KRBone.h  KRBundle.cpp  KRBundle.h  KRBundleManager.cpp  KRBundleManager.h  KRCamera.cpp  KRCamera.h  KRCollider.cpp  KRCollider.h  KRContext.cpp  KRContext.h  (+181 more)
kraken/nodes/: KRAmbientZone.cpp  KRAmbientZone.h  KRAudioSource.cpp  KRAudioSource.h  KRBone.cpp  KRBone.h  KRCamera.cpp  KRCamera.h  KRCollider.cpp  KRCollider.h  KRDirectionalLight.cpp  KRDirectionalLight.h  KRLODGroup.cpp  KRLODGroup.h  KRLODSet.cpp  KRLODSet.h  KRLight.cpp  KRLight.h  KRLocator.cpp  KRLocator.h  KRModel.cpp  KRModel.h  KRNode.cpp  KRNode.h  KRNodeProperty.h  KRParticleSystem.cpp  KRParticleSystem.h  KRParticleSystemNewtonian.cpp  KRParticleSystemNewtonian.h  KRPointLight.cpp  KRPointLight.h  KRReverbZone.cpp  KRReverbZone.h  KRSpotLight.cpp  KRSpotLight.h  KRSprite.cpp  KRSprite.h
kraken/public/: CMakeLists.txt  KRAABB.h  KRFloat.h  KRMat4.h  KRQuaternion.h  KRTriangle3.h  KRVector2.h  KRVector3.h  KRVector4.h  aabb.h  context.h  hitinfo.h  kraken.h  matrix4.h  quaternion.h  scalar.h  triangle3.h  vector2.h  vector3.h  vector4.h
kraken/resources/: KRResource+blend.cpp  KRResource+blend.h  KRResource+fbx.cpp  KRResource+gltf.cpp  KRResource+obj.cpp  KRResource.cpp  KRResource.h  KRResourceBinding.cpp  KRResourceBinding.h  KRResourceManager.cpp  KRResourceManager.h  KRResourceRequest.h
kraken/resources/animation/: KRAnimation.cpp  KRAnimation.h  KRAnimationAttribute.cpp  KRAnimationAttribute.h  KRAnimationLayer.cpp  KRAnimationLayer.h  KRAnimationManager.cpp  KRAnimationManager.h
kraken/resources/animation_curve/: KRAnimationCurve.cpp  KRAnimationCurve.h  KRAnimationCurveManager.cpp  KRAnimationCurveManager.h
kraken/resources/audio/: KRAudioManager.cpp  KRAudioManager.h  KRAudioSample.cpp  KRAudioSample.h  KRAudioSampleBinding.cpp  KRAudioSampleBinding.h
kraken/resources/bundle/: KRBundle.cpp  KRBundle.h  KRBundleManager.cpp  KRBundleManager.h
kraken/resources/material/: KRMaterial.cpp  KRMaterial.h  KRMaterialBinding.cpp  KRMaterialBinding.h  KRMaterialManager.cpp  KRMaterialManager.h
kraken/resources/mesh/: KRMesh.cpp  KRMesh.h  KRMeshBinding.cpp  KRMeshBinding.h  KRMeshCube.cpp  KRMeshCube.h  KRMeshManager.cpp  KRMeshManager.h  KRMeshQuad.cpp  KRMeshQuad.h  KRMeshSphere.cpp  KRMeshSphere.h
kraken/resources/scene/: KRScene.cpp  KRScene.h  KRSceneManager.cpp  KRSceneManager.h
kraken/resources/shader/: KRShader.cpp  KRShader.h  KRShaderManager.cpp  KRShaderManager.h
kraken/resources/source/: KRSource.cpp  KRSource.h  KRSourceManager.cpp  KRSourceManager.h
kraken/resources/texture/: KRTexture.cpp  KRTexture.h  KRTexture2D.cpp  KRTexture2D.h  KRTextureAnimated.cpp  KRTextureAnimated.h  KRTextureBinding.cpp  KRTextureBinding.h  KRTextureCube.cpp  KRTextureCube.h  KRTextureKTX.cpp  KRTextureKTX.h  KRTextureKTX2.cpp  KRTextureKTX2.h  KRTextureManager.cpp  KRTextureManager.h  KRTexturePNG.cpp  KRTexturePNG.h  KRTexturePVR.cpp  KRTexturePVR.h  KRTextureTGA.cpp  KRTextureTGA.h
kraken/resources/unknown/: KRUnknown.cpp  KRUnknown.h  KRUnknownManager.cpp  KRUnknownManager.h
kraken_android/: CMakeLists.txt
kraken_ios/: Info.plist  KrakenView.h  KrakenView.mm  kraken.h
kraken_osx/: Kraken-Info.plist  KrakenView.h  KrakenView.mm  kraken-prefix.pch  kraken.h  kraken.mm
kraken_standard_assets/: CMakeLists.txt  hrtf_kemar.krbundle
kraken_standard_assets_ios/: Resources-Info.plist
kraken_standard_assets_osx/: Resources-Info.plist
kraken_standard_assets_tvos/: Resources-Info.plist
kraken_tvos/: kraken.h
kraken_win/: kraken.sln  kraken.vcxproj  kraken.vcxproj.filters
krengine.xcworkspace/: contents.xcworkspacedata
objview/: KRObjView-Info.plist  KRObjView_Prefix.pch  MainWindow.xib  main.m
standard_assets/: CMakeLists.txt  __white.mtl
tests/: CMakeLists.txt
tests/smoke/hello_cube/: CMakeLists.txt  harness.cpp  harness.h  hello_cube.cpp  hello_cube.h  main.cpp  main_macos.mm  main_win.cpp
toolchain/: toolchain-ppc64le-linux-clang.cmake  toolchain-x86_64-apple-darwin-clang.cmake  toolchain-x86_64-linux-clang.cmake
tools/: CMakeLists.txt  toolchain-x86_64-apple-darwin-clang.cmake  toolchain-x86_64-pc-windows-msvc.cmake
tools/convert/: CMakeLists.txt  main.cpp  main.h
(+345 files in other folders)
