include_directories(public)
add_subdirectory(public)
set(KRAKEN_PUBLIC_HEADERS "${KRAKEN_PUBLIC_HEADERS}" PARENT_SCOPE)
set(KRAKEN_PRIVATE_HEADERS "${KRAKEN_PRIVATE_HEADERS}" PARENT_SCOPE)

# Private Implementation
add_sources(kraken.cpp)
add_private_headers(KREngine-common.h)
add_source_and_header(KRAmbientZone)
add_source_and_header(KRAnimation)
add_source_and_header(KRAnimationAttribute)
add_source_and_header(KRAnimationCurve)
add_source_and_header(KRAnimationCurveManager)
add_source_and_header(KRAnimationLayer)
add_source_and_header(KRAnimationManager)
add_source_and_header(KRAudioBuffer)
add_source_and_header(KRAudioManager)
add_source_and_header(KRAudioSample)
add_source_and_header(KRAudioSource)
add_source_and_header(KRBehavior)
add_source_and_header(KRBone)
add_source_and_header(KRBundle)
add_source_and_header(KRBundleManager)
add_source_and_header(KRCamera)
add_source_and_header(KRCollider)
add_source_and_header(KRContext)
add_source_and_header(KRUniformBuffer)
add_source_and_header(KRUniformBufferManager)
add_source_and_header(KRDevice)
add_source_and_header(KRDeviceManager)
add_source_and_header(KRRenderPass)
add_source_and_header(KRSurface)
add_source_and_header(KRSurfaceManager)
add_source_and_header(KRStreamerThread)
add_source_and_header(KRSwapchain)
add_source_and_header(KRContextObject)
add_source_and_header(KRDirectionalLight)
add_source_and_header(KRHelpers)
add_source_and_header(KRLight)
add_source_and_header(KRLocator)
add_source_and_header(KRLODGroup)
add_source_and_header(KRLODSet)
add_source_and_header(KRMaterial)
add_source_and_header(KRMaterialManager)
add_source_and_header(KRMesh)
add_source_and_header(KRMeshCube)
add_source_and_header(KRMeshManager)
add_source_and_header(KRMeshQuad)
add_source_and_header(KRMeshSphere)
add_source_and_header(KRModel)
add_source_and_header(KRNode)
add_source_and_header(KROctree)
add_source_and_header(KROctreeNode)
add_source_and_header(KRParticleSystem)
add_source_and_header(KRParticleSystemNewtonian)
add_source_and_header(KRPointLight)
add_source_and_header(KRPresentationThread)
add_source_and_header(KRRenderGraph)
add_source_and_header(KRRenderSettings)
add_sources(KRResource+blend)
# add_source(KRResource+fbx.cpp) # TODO - Locate FBX SDK dependencies
add_sources(KRResource+obj.cpp)
add_private_headers(KRResource.h)
add_source_and_header(KRResource)
add_source_and_header(KRResourceManager)
add_source_and_header(KRReverbZone)
add_source_and_header(KRScene)
add_source_and_header(KRSceneManager)
add_source_and_header(KRShader)
add_source_and_header(KRShaderManager)
add_source_and_header(KRSource)
add_source_and_header(KRSourceManager)
add_source_and_header(KRPipeline)
add_source_and_header(KRPipelineManager)
add_source_and_header(KRSampler)
add_source_and_header(KRSamplerManager)
add_source_and_header(KRSpotLight)
add_source_and_header(KRSprite)
add_source_and_header(KRTexture)
add_source_and_header(KRTexture2D)
add_source_and_header(KRTextureAnimated)
add_source_and_header(KRTextureCube)
add_source_and_header(KRTextureKTX)
add_source_and_header(KRTextureKTX2)
add_source_and_header(KRTextureManager)
add_source_and_header(KRTexturePVR)
add_source_and_header(KRTextureTGA)
add_source_and_header(KRUnknown)
add_source_and_header(KRUnknownManager)
add_source_and_header(KRViewport)
add_source_and_header(../3rdparty/tinyxml2/tinyxml2)
add_source_and_header(../3rdparty/forsyth/forsyth)
